# watcher

./: Dockerfile  pyproject.toml  watch.py  watcher.test.conf
tests/: test_watcher.py
watcher/: config.py  curtain.py  github.py  rules.py
