[tool.poetry]
name = "watcher"
version = "0.4.0"
description = ""
authors = ["Chris Alexander <crainte@hybridoptix.net>"]

[tool.poetry.dependencies]
python = "^3.8"
agithub = "^2.2.2"
backoff = "^1.10.0"
loguru = "^0.5.2"
"oslo.config" = "^8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
